<resources>
    <string name="app_name">ReKotlin-GitHub-Example</string>
    <string name="title_activity_login">GitHub Sign In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="repo_name">Repository Name</string>
    <string name="repo_fullname">Repository Full Name</string>
    <string name="stars">stars</string>
    <string name="repo_stars">0</string>
    <string name="repo_forks">forks</string>
    <string name="repo_list_name">List of your repositories </string>
    <string name="repo_langauge">Repository Language</string>
    <string name="repo_language">Repository Language</string>
    <string name="welcome_name">Welcome user</string>
    <string name="repo_count_description">You have 0 repositories</string>
    <string name="view">View</string>
    <string name="repo_createdAt">Created At</string>
    <string name="repo_location">Location</string>
    <string name="welcome_github">Welcome to GitHub</string>
</resources>
