<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.rekotlinexample.github.controllers.WelcomeActivity">

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:contentDescription="@string/welcome_name"
        android:text="@string/welcome_name"
        android:textSize="36sp"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/tv_repo_count_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:contentDescription="@string/repo_count_description"
        android:text="@string/repo_count_description"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/view"
        android:id="@+id/btn_viewRepo"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="@id/tv_repo_count_description"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_createdAt"
        android:text="@string/repo_createdAt"
        android:textSize="14sp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_repo_count_description"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_location"
        android:src="@drawable/ic_location_on"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_createdAt"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_location"
        android:text="@string/repo_location"
        android:textSize="14sp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_createdAt"
        app:layout_constraintLeft_toRightOf="@id/iv_location"/>

</android.support.constraint.ConstraintLayout>
