<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/tv_repo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:contentDescription="@string/repo_name"
        android:text="@string/repo_name"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:id="@+id/tv_repo_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:contentDescription="@string/repo_name"
        android:text="@string/repo_fullname"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tv_repo_name"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:id="@+id/iv_repo_stars"
        android:src="@drawable/ic_grade_black_24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:contentDescription="@string/repo_stars"
        app:layout_constraintTop_toBottomOf="@id/tv_repo_fullname"/>
    <TextView
        android:id="@+id/tv_repo_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/repo_stars"
        android:text="@string/stars"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/iv_repo_stars"
        app:layout_constraintTop_toBottomOf="@id/tv_repo_fullname"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:id="@+id/iv_repo_forks"
        android:src="@drawable/ic_if_git_branch_298785"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/repo_forks"
        app:layout_constraintTop_toBottomOf="@id/tv_repo_fullname"
        app:layout_constraintStart_toEndOf="@id/tv_repo_stars"/>
    <TextView
        android:id="@+id/tv_repo_forks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/repo_forks"
        android:text="@string/repo_forks"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/iv_repo_forks"
        app:layout_constraintTop_toBottomOf="@id/tv_repo_fullname"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:id="@+id/iv_repo_language"
        android:src="@drawable/ic_circle_24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/repo_language"
        app:layout_constraintTop_toBottomOf="@id/tv_repo_fullname"
        app:layout_constraintStart_toEndOf="@id/tv_repo_forks"/>
    <TextView
        android:id="@+id/tv_repo_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/repo_language"
        android:text="@string/repo_language"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/iv_repo_language"
        app:layout_constraintTop_toBottomOf="@id/tv_repo_fullname"/>



</android.support.constraint.ConstraintLayout>

